syntax = "proto3";

package shared;

option csharp_namespace = "Shared";

/*
  Indicates if the operation has success  
*/
enum Status {
  OK = 0;
  ERROR = 1;
  MISSING_PARAMETERS = 2;
}
/*
  Represent the result of the required operation, if an error occurred then the exception message is returned
*/
message Result {
  Status status = 1;
  optional string error = 2;
}